Major Architectural refactoring pt.2